--- a/index.html
+++ b/index.html
@@ -8,16 +8,43 @@
 
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
+	
 
 			<link rel="stylesheet" href="css/styles.css"/>
-			
+			<script src="lib/jquery-3.1.0.js"></script>
+
+			<script src="esf/esf.js"></script>
+				<script src="esf/Model.js"></script>
+				<script src="esf/View.js"></script>
+				<script src="esf/Controller.js"></script>
+				<script src="esf/httpRequest.js"></script>
+
 
 	</head>
 
 <body >
 
-	<script src="js/client.js"></script>
+	<div id='todos' style="display: block; width: 600px; margin: auto; margin-top: 20px; margin-bottom: 20px; border: 1px solid black; text-align: center">
+
+	</div>
+
+	<div>
+		
+		<div id='buttons' style="width: 610px; margin: auto;">
+	
+		</div>
+	</div>
+
+	<div id ='input'>
+		<input type="text" class="form-input" style="display: block; border: 1px solid black; margin: auto; margin-top: 30px; width: 600px">
+	</div>
+	
+	
+<script src="client.js">
+
+</script>
+
+
 </body>
 
 
